# for_course_work_3

./: README.md  pyproject.toml
src/: class_api.py  class_for_file.py  func_for_vac.py  functions.py
tests/: test_class_api.py  test_func_for_vac.py  test_functions.py
