[tool.poetry]
name = "for-course-word-3"
version = "0.1.0"
description = ""
authors = ["Al_Pl <asuspitsyn@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.11.1"
requests = "^2.32.3"
chardet = "^5.2.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 90